# taligalaw

./: .gitignore  Cargo.toml  README.md
assets/: simple_arm_10dof.urdf  simple_arm_6dof.urdf  simple_robot.urdf
assets/urdf/custom/: simple-arm_3dof_rrp.urdf  simple_arm_20dof.urdf  simple_arm_2dof.urdf  simple_arm_2dof_flipped.urdf  simple_robot.urdf  simple_robot_flipped.urdf
benches/: fk_speed.rs
docs/: benchmarking.md  codegen_fk_math_optimization.md  refactor_load_urdf.md  release_plan.md
examples/: plot_bench.rs
scripts/: codegen_all_urdfs.sh
src/: error.rs  fixtures.rs  kinematics.rs  lib.rs  main.rs  parser.rs  types.rs  utils.rs
tests/: fk_correctness.rs
