[package]
name = "galaw"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = {version="2.1.1", features=["add"]}
nalgebra = "0.30.1"
roxmltree = "0.20.0"

[dev-dependencies]
charming = { version = "0.6.0", features = ["ssr-raster"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
rand = "0.10.2"
rand_chacha = "0.10.0"
serde_json = "1"
sysinfo = "0.39.6"
k = "0.32.0"

[[bench]]
name = "fk_speed"
harness = false

