[package]
name = "galaw"
version = "0.1.0"
edition = "2024"

[lib]
# Without this, `cargo bench` also builds/runs the lib crate itself as an
# implicit benchmark target via the plain libtest harness, which doesn't
# understand criterion-specific flags like --save-baseline and errors out
# before the real fk_speed bench (harness = false, below) even runs.
bench = false

[dependencies]
derive_more = {version="2.1.1", features=["add"]}
nalgebra = "0.30.1"
roxmltree = "0.20.0"

[dev-dependencies]
charming = { version = "0.6.0", features = ["ssr-raster"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
rand = "0.10.2"
rand_chacha = "0.10.0"
serde_json = "1"
sysinfo = "0.39.6"
k = "0.32.0"

# Same reasoning as [lib] above: cargo bench also runs every binary target's
# implicit test/bench harness by default. Declaring them explicitly (still at
# their auto-discovered paths) is the only way to override that per-binary.
[[bin]]
name = "galaw"
path = "src/main.rs"
bench = false

[[bin]]
name = "codegen_fk"
path = "src/bin/codegen_fk.rs"
bench = false

[[bench]]
name = "fk_speed"
harness = false

